--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/general.css">
+    <link rel="stylesheet" href="../style/index.css">
     <title>Deep Web Market</title>
 </head>
 <body>
@@ -15,21 +15,21 @@
         </header>
 
         <nav>
-            <a href="./products.html" target="_blank">Products</a>
-            <a href="./contacts.html" target="_blank">Contacts</a>
+            <a href="./products.html" target="_blank"><b>Products</b></a>
+            <a href="./contacts.html" target="_blank"><b>Contacts</b></a>
         </nav>
     </head>
 
     <main>
         <section class="description-section">
-            Welcome to the Deep Web Market! <br> 
+            <b>Welcome to the Deep Web Market!</b> <br> 
             Here you can find all sorts
             of creatures that may interest you. <br>
             Birds, mamals, cats, we got em' all!!
         </section>
 
         <section class="products-section">
-            <h2>Take a Look</h2>
+            <h2>Take a Look &#128064;</h2>
             
             <div class="imgSec-container">
                 <div class="imgSec-item">
@@ -61,7 +61,8 @@
     </main>
 
     <footer>
-        <span>Made for a web dev class | Vitor Bonelli 2023</span>
+        <span>Made for a web dev class<br><b>Vitor Bonelli</b> | 2023 </span>
+        <span class="copyright-footer">All rights reserved to me,<br><b>MUAHAHA!</b></span>
     </footer>
 </body>
 </html>
