--- a/pages/products.html
+++ b/pages/products.html
@@ -4,11 +4,115 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <link rel="stylesheet" href="../style/products.css">
+    <title>Deep Web Market - Products</title>
 </head>
 <body>
-    <head></head>
-    <main></main>
-    <footer></footer>
+    <head>
+        <header>
+            <h1>Deep Web Market</h1>
+            <span>100% real, live animals</span>
+        </header>
+
+        <nav>
+            <a href="./index.html" target="_blank"><b>Home</b></a>
+            <a href="./contacts.html" target="_blank"><b>Contacts</b></a>
+        </nav>
+    </head>
+
+    <main>
+        <div class="main-title">
+            <h2>Live Creatures!</h2>
+            <span>Long forgotten, or not!<br>We have them!</span>
+        </div>
+
+        <div class="imgSec-container">
+            <div class="imgSec-item">
+                <img src="../images/zoiudo.png" alt="peshe">
+                <div class="item-desc">
+                    <span><b>Peixe Miope </b></span>
+                    <span><b>Preço: 10BTC</b></span>
+                    <span class="descrição">
+
+                    </span>
+
+                    <button>Comprar!</button>
+                </div>
+            </div>
+
+            <div class="imgSec-item">
+                <img src="../images/tardigrad.webp" alt="tardigrade">
+
+                <div class="item-desc">
+                    <span><b>Caruncho de Farofa</b></span>
+                    <span><b>Preço: 0.6BTC</b></span>
+                    <span class="descrição">
+
+                    </span>
+
+                    <button>Comprar!</button>
+                </div>
+            </div>
+
+            <div class="imgSec-item">
+                <img src="../images/fiote.png" alt="zoiudo">
+                <div class="item-desc">
+                    <span><b>Fiote de Cruz-Credo</b></span>
+                    <span><b>Preço: 69BTC</b></span>
+                    <span class="descrição">
+
+                    </span>
+
+                    <button>Comprar!</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="imgSec-container">
+            <div class="imgSec-item">
+                <img src="../images/worm.jpg" alt="peshe">
+                <div class="item-desc">
+                    <span><b>Minhoca</b></span>
+                    <span><b>Preço: 0BTC</b></span>
+                    <span class="descrição">
+
+                    </span>
+
+                    <button>Comprar!</button>
+                </div>
+            </div>
+
+            <div class="imgSec-item">
+                <img src="../images/biped.jpg" alt="tardigrade">
+                <div class="item-desc">
+                    <span><b>Gato Bípede</b></span>
+                    <span><b>Preço: 999BTC</b></span>
+                    <span class="descrição">
+
+                    </span>
+
+                    <button>Comprar!</button>
+                </div>
+            </div>
+
+            <div class="imgSec-item">
+                <img src="../images/birb.jpeg" alt="zoiudo">
+                <div class="item-desc">
+                    <span><b>Pomba Doente</b></span>
+                    <span><b>Preço: 8BTC</b></span>
+                    <span class="descrição">
+
+                    </span>
+
+                    <button>Comprar!</button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <span>Made for a web dev class<br><b>Vitor Bonelli</b> | 2023 </span>
+        <span class="copyright-footer">All rights reserved to me,<br><b>MUAHAHA!</b></span>
+    </footer>
 </body>
 </html>
